{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 97,
  "lineage": "14e1548e-4111-5c86-a970-79413ce93494",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba98e1c0509a4c36",
            "arn": "arn:aws:ec2:us-east-1:697064446528:elastic-ip/eipalloc-0ba98e1c0509a4c36",
            "association_id": "eipassoc-0987e124e1904562e",
            "domain": "vpc",
            "id": "eipalloc-0ba98e1c0509a4c36",
            "network_border_group": "us-east-1",
            "network_interface": "eni-014316bbaec74d2e2",
            "private_dns": "ip-10-0-13-194.ec2.internal",
            "private_ip": "10.0.13.194",
            "public_dns": "ec2-3-208-196-146.compute-1.amazonaws.com",
            "public_ip": "3.208.196.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud-native-cluster-nat-eip-0"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-nat-eip-0",
              "Project": "cloud-native-migration"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a14d69aaf8170aa1",
            "arn": "arn:aws:ec2:us-east-1:697064446528:elastic-ip/eipalloc-0a14d69aaf8170aa1",
            "association_id": "eipassoc-01c885230409b0353",
            "domain": "vpc",
            "id": "eipalloc-0a14d69aaf8170aa1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-001acca32ca0280bf",
            "private_dns": "ip-10-0-21-234.ec2.internal",
            "private_ip": "10.0.21.234",
            "public_dns": "ec2-52-22-179-245.compute-1.amazonaws.com",
            "public_ip": "52.22.179.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud-native-cluster-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-nat-eip-1",
              "Project": "cloud-native-migration"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:internet-gateway/igw-0e321496f4cf5f9e1",
            "id": "igw-0e321496f4cf5f9e1",
            "owner_id": "697064446528",
            "tags": {
              "Name": "cloud-native-cluster-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-igw",
              "Project": "cloud-native-migration"
            },
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba98e1c0509a4c36",
            "association_id": "eipassoc-0987e124e1904562e",
            "connectivity_type": "public",
            "id": "nat-0eaf302ac80d5517c",
            "network_interface_id": "eni-014316bbaec74d2e2",
            "private_ip": "10.0.13.194",
            "public_ip": "3.208.196.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a00448074cfa60fb",
            "tags": {
              "Name": "cloud-native-cluster-nat-0"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-nat-0",
              "Project": "cloud-native-migration"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a14d69aaf8170aa1",
            "association_id": "eipassoc-01c885230409b0353",
            "connectivity_type": "public",
            "id": "nat-0fff6205142824cda",
            "network_interface_id": "eni-001acca32ca0280bf",
            "private_ip": "10.0.21.234",
            "public_ip": "52.22.179.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e8b4833b6a666d1",
            "tags": {
              "Name": "cloud-native-cluster-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-nat-1",
              "Project": "cloud-native-migration"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:route-table/rtb-0f32b91c7879a87e4",
            "id": "rtb-0f32b91c7879a87e4",
            "owner_id": "697064446528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eaf302ac80d5517c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-native-cluster-private-rt-0"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-private-rt-0",
              "Project": "cloud-native-migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:route-table/rtb-01b72f0808fe9860a",
            "id": "rtb-01b72f0808fe9860a",
            "owner_id": "697064446528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fff6205142824cda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-native-cluster-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-private-rt-1",
              "Project": "cloud-native-migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:route-table/rtb-0913370ee0882d2d0",
            "id": "rtb-0913370ee0882d2d0",
            "owner_id": "697064446528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e321496f4cf5f9e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-native-cluster-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-public-rt",
              "Project": "cloud-native-migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0135f9ee3cf3c4fbe",
            "route_table_id": "rtb-0f32b91c7879a87e4",
            "subnet_id": "subnet-0200ec966d07be679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8a22cd448308f14",
            "route_table_id": "rtb-01b72f0808fe9860a",
            "subnet_id": "subnet-03b4cf611981fe6dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aba7a63e5c04215",
            "route_table_id": "rtb-0913370ee0882d2d0",
            "subnet_id": "subnet-0a00448074cfa60fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b19c053f89ece3e",
            "route_table_id": "rtb-0913370ee0882d2d0",
            "subnet_id": "subnet-04e8b4833b6a666d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:subnet/subnet-0200ec966d07be679",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0200ec966d07be679",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697064446528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-native-cluster-private-us-east-1a",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-private-us-east-1a",
              "Project": "cloud-native-migration",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:subnet/subnet-03b4cf611981fe6dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b4cf611981fe6dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697064446528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-native-cluster-private-us-east-1b",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-private-us-east-1b",
              "Project": "cloud-native-migration",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:subnet/subnet-0a00448074cfa60fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a00448074cfa60fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697064446528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-native-cluster-public-us-east-1a",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-public-us-east-1a",
              "Project": "cloud-native-migration",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:subnet/subnet-04e8b4833b6a666d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e8b4833b6a666d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697064446528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-native-cluster-public-us-east-1b",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-public-us-east-1b",
              "Project": "cloud-native-migration",
              "kubernetes.io/cluster/cloud-native-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c3a76f090a4dc196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697064446528:vpc/vpc-0c3a76f090a4dc196",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030403cd14769b5e9",
            "default_route_table_id": "rtb-08f773c9afd272589",
            "default_security_group_id": "sg-0894f4d075bc29109",
            "dhcp_options_id": "dopt-08693234064883f5d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3a76f090a4dc196",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f773c9afd272589",
            "owner_id": "697064446528",
            "tags": {
              "Name": "cloud-native-cluster-vpc",
              "kubernetes.io/cluster/cloud-native-cluster": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cloud-native-cluster-vpc",
              "Project": "cloud-native-migration",
              "kubernetes.io/cluster/cloud-native-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}